test/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    solsa.ibm.com/pod: hello
  type: ClusterIP
