test/yaml/translator.yaml
apiVersion: ibmcloud.ibm.com/v1alpha1
kind: Service
metadata:
  name: translator
spec:
  plan: lite
  serviceClass: language-translator
---
apiVersion: ibmcloud.ibm.com/v1alpha1
kind: Binding
metadata:
  name: translator
spec:
  serviceName: translator
